Bug 36052 - [Patch] Systemd shouldn't force setting a new font in vconsole-setup
Summary: [Patch] Systemd shouldn't force setting a new font in vconsole-setup
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-07 07:18 UTC by Marc-Antoine Perennou
Modified: 2011-04-19 19:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Allow skipping font setting (2.62 KB, patch)
2011-04-07 07:21 UTC, Marc-Antoine Perennou
Details | Splinter Review
Allow skipping font setting for Gentoo (1.17 KB, patch)
2011-04-07 07:21 UTC, Marc-Antoine Perennou
Details | Splinter Review
Allow skipping font setting (2.62 KB, patch)
2011-04-08 02:35 UTC, Marc-Antoine Perennou
Details | Splinter Review
Allow skipping font setting (1.17 KB, patch)
2011-04-08 06:48 UTC, Marc-Antoine Perennou
Details | Splinter Review
Allow skipping font setting (1.20 KB, patch)
2011-04-08 07:05 UTC, Marc-Antoine Perennou
Details | Splinter Review
Don't force a default font (2.75 KB, patch)
2011-04-08 10:10 UTC, Marc-Antoine Perennou
Details | Splinter Review
Don't force a default font (2.88 KB, patch)
2011-04-09 06:38 UTC, Marc-Antoine Perennou
Details | Splinter Review

Description Marc-Antoine Perennou 2011-04-07 07:18:04 UTC
For now, we don't have the choice whether to keep or not the font we have built in the kernel, systemd force setting a new font when running vconsole-setup.
This patch allows disabling this by setting SKIP_FONT_SETTING to yes in /etc/vconsole.conf or by passing vconsole.skipfontsetting=yes to kernel cmdline.
Comment 1 Marc-Antoine Perennou 2011-04-07 07:21:26 UTC
Created attachment 45371 [details] [review]
Allow skipping font setting
Comment 2 Marc-Antoine Perennou 2011-04-07 07:21:46 UTC
Created attachment 45372 [details] [review]
Allow skipping font setting for Gentoo
Comment 3 Marc-Antoine Perennou 2011-04-08 02:35:55 UTC
Created attachment 45414 [details] [review]
Allow skipping font setting

use parse_boolean
Comment 4 Lennart Poettering 2011-04-08 06:23:15 UTC
I think it would be nicer to just consider an empty font assignment a request to turn this off.
Comment 5 Marc-Antoine Perennou 2011-04-08 06:48:02 UTC
Created attachment 45420 [details] [review]
Allow skipping font setting

True. Really better like this
Comment 6 Marc-Antoine Perennou 2011-04-08 07:05:03 UTC
Created attachment 45421 [details] [review]
Allow skipping font setting

Ok, this actually didn't work... Maybe setting the consolefont to none like this to disable it would be a good workaround ?
Comment 7 Marc-Antoine Perennou 2011-04-08 10:10:30 UTC
Created attachment 45428 [details] [review]
Don't force a default font

Ok, I maybe didn't understood what you really wanted to say, here is a patch not to force the default font in case no font is specified
Comment 8 Marc-Antoine Perennou 2011-04-09 06:38:40 UTC
Created attachment 45440 [details] [review]
Don't force a default font

Missed that bit ...
Comment 9 Lennart Poettering 2011-04-19 19:31:56 UTC
Applied a different fix now to git. Just create /etc/vconsole with this content:

KEYMAP=
FONT=

and system will leave the kernel map/font enabled.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.