vconsole: don't set console font/keymap if settings are empty

https://bugs.freedesktop.org/show_bug.cgi?id=36052

If KEYMAP= is set to the empty string in /etc/vconsole leave the kernel
keymap loaded.

Similar for FONT=.